--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@azure/functions": "^4.0.0",
     "@azure/openai": "^2.0.0",
     "@azure/storage-blob": "^12.0.0",
+    "canvas": "^3.1.2",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
