--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@azure/openai": "^2.0.0",
     "@azure/storage-blob": "^12.0.0",
     "canvas": "^3.1.2",
+    "luxon": "^3.7.1",
+    "node-fetch": "^2.7.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
