--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
+    "@azure/app-configuration": "^1.9.0",
     "@azure/core-auth": "^1.5.0",
     "@azure/cosmos": "^4.4.1",
     "@azure/functions": "^4.0.0",
     "@azure/openai": "^2.0.0",
     "@azure/storage-blob": "^12.0.0",
+    "axios": "^1.10.0",
     "canvas": "^3.1.2",
     "luxon": "^3.7.1",
     "node-fetch": "^2.7.0",
