--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "canvas": "^3.1.2",
     "luxon": "^3.7.1",
     "node-fetch": "^2.7.0",
+    "openai": "^5.10.2",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
@@ -31,5 +32,5 @@
     "rimraf": "^5.0.0",
     "typescript": "^5.0.0"
   },
-  "main": "dist/src/{index.js,functions/*.js}"
+  "main": "dist/src/functions/*.js"
 }
