--- a/package.json
+++ b/package.json
@@ -32,5 +32,5 @@
     "rimraf": "^5.0.0",
     "typescript": "^5.0.0"
   },
-  "main": "dist/src/functions/*.js"
+  "main": "dist/src/{index.js,functions/*.js}"
 }
