--- a/.github/workflows/main_func-autogensocial-contentorchestrator.yml
+++ b/.github/workflows/main_func-autogensocial-contentorchestrator.yml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: './dist' # set this to the build output directory
   NODE_VERSION: '20.x' # set this to the node version to use (supports 8.x, 10.x, 12.x)
 
 jobs:
@@ -38,7 +38,7 @@ jobs:
           popd
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip -r release.zip ./*
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -76,4 +76,8 @@ jobs:
           app-name: 'func-autogensocial-contentorchestrator'
           slot-name: 'Production'
           package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+          respect-funcignore: false
+          remote-build: true
+          enable-oryx-build: true
+          scm-do-build-during-deployment: true
           
