--- a/.github/workflows/main_func-autogensocial-contentorchestrator.yml
+++ b/.github/workflows/main_func-autogensocial-contentorchestrator.yml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'dist' # set this to the build output directory
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: './dist' # set this to the build output directory
   NODE_VERSION: '20.x' # set this to the node version to use (supports 8.x, 10.x, 12.x)
 
 jobs:
@@ -31,14 +31,12 @@ jobs:
       - name: 'Resolve Project Dependencies Using Npm'
         shell: bash
         run: |
-          pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
           npm install
           npm run build --if-present
           npm run test --if-present
-          popd
 
       - name: Zip artifact for deployment
-        run: zip -r release.zip ./*
+        run: cd dist && zip -r ../release.zip ./*
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
