--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prestart": "npm run clean && npm run build",
     "start": "func start --port 7072 --verbose",
     "generate:models": "openapi-typescript '../specs/openapi-bundled.json' --output ./generated/models.ts",
-    "copy:fonts": "mkdir -p src/resources && cp ../specs/resources/fonts.json src/resources/fonts.json",
+    "copy:fonts": "mkdir -p src/resources && cp ../specs/resources/fonts.json ./resources/fonts.json",
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
